[tool.poetry]
name = "covid19"
version = "0.1.0"
description = ""
authors = ["Eunseok Hyun <eshyun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.0"
pandas = "^1.0.1"
numpy = "^1.18.1"
scipy = "^1.4.1"
requests = "^2.23.0"
gunicorn = "^20.0.4"
pyqt5 = "^5.14.1"
sklearn = "^0.0"
plotly = "^4.5.4"
cufflinks = "^0.17.3"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
